--- a/prometej_client/package.json
+++ b/prometej_client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.16",
+    "@mui/x-charts": "^7.6.2",
     "@reduxjs/toolkit": "^2.2.3",
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-document": "^2.4.0",
